Bug 407746 - Page misaligns when swiped to the left with a mac trackpad

--- a/bundles/org.eclipse.orion.client.ui/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/ide.css
@@ -6,7 +6,6 @@
 @import "./progress.css";
 
 html {
-  overflow-x: hidden; /* workaround to get rid of horizontal scrollbar */
   cursor: default;
   height: 100%;
 }
